test/language/spec/declarations/valid/file_import.topo
// File import declaration

import other;

namespace caller {
  public:
    void invoke();
}
