test/language/spec/declarations/invalid/invalid_return_type.topo
// TEST: malformed trailing return type
// EXPECT-ERROR: expected

namespace app {
  public:
    run() -> -> int;
}
